# claude-code-scrollback

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: chore.md  feature_request.md
.github/workflows/: ci.yml  test.yml
crates/ccs-cli/: Cargo.toml
crates/ccs-cli/src/: logging.rs  main.rs
crates/ccs-cli/tests/: first_run.rs
crates/ccs-core/: Cargo.toml
crates/ccs-core/benches/: discover.rs  tail.rs
crates/ccs-core/examples/: parse_all.rs
crates/ccs-core/src/: checkpoints.rs  jsonl.rs  lib.rs  metadata.rs  session.rs  tail.rs  transcript.rs
crates/ccs-core/tests/: parse_fixtures.rs  schema_snapshots.rs
crates/ccs-core/tests/fixtures/: basic.jsonl  compacted_after.jsonl  compacted_before.jsonl
crates/ccs-core/tests/schema_snapshots/: v2.1.104.jsonl
crates/ccs-tui/: Cargo.toml
crates/ccs-tui/benches/: search.rs
crates/ccs-tui/src/: app.rs  clipboard.rs  lib.rs  tail.rs
crates/ccs-tui/src/ui/: mod.rs  picker.rs  viewer.rs
crates/ccs-tui/src/ui/transcript/: keymap.rs  layout.rs  markdown.rs  mod.rs  render.rs  search.rs  state.rs  yank.rs
docs/: contributing.md  installation.md  quickstart.md
