[package]
name = "ccs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Read-only TUI viewer for Claude Code session JSONLs — picker, transcript, live-tail, search, marks."
readme = "../../README.md"

[[bin]]
name = "claude-code-scrollback"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
ccs-core.workspace = true
ccs-tui.workspace = true

anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
