[package]
name = "ccs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data model, JSONL parsing, session discovery, and checkpoints for claude-code-scrollback"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true

[lints]
workspace = true
