[package]
name = "ccs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core data model, JSONL parsing, session discovery, and checkpoints for claude-code-scrollback"
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "discover"
harness = false

[[bench]]
name = "tail"
harness = false

[lints]
workspace = true
